<resources>
    <string name="app_name">Firefly III Shortcuts</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_settings">Settings</string>
    <string name="server_url">Server URL</string>
    <string name="save">Save</string>
    <string name="client_id">Client Id</string>
    <string name="synchronize_server_data">Synchronize Server Data</string>
    <string name="server">Server</string>
    <string name="authorization">Authorization</string>
    <string name="registered_redirect_url">Registered Redirect URL</string>
    <string name="registered_return_url_info">The URL which will open after a successful authorization. This is set in Firefly III settings, and Firefly does not support non-http return URLs. Therefore for now it is fixed to a placeholder URL on my server, which is empty; this app is registered to that URL and will prompt to open the link.</string>
    <string name="status">Status:</string>
    <string name="authorize">Authorize</string>
    <string name="start">Start</string>
    <string name="sync_now">Sync Now</string>
    <string name="authorized">Authorized</string>
    <string name="reauthorize">Re-Authorize</string>
    <string name="title_sync">Sync</string>
    <string name="sync_information_long">Synchronizing the server data will fetch the latest entities from your server (accounts, categories, bills, etc). If there are any shortcuts that referred to a deleted entity (a deleted account, for example), that shortcut will be removed automatically.</string>
    <string name="start_sync">Start Sync</string>
    <string name="data_synchronization">Data Synchronization</string>
    <string name="sync_results">Sync Results</string>
    <string name="accounts">Accounts</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="deleted">Deleted</string>
    <string name="back">Back</string>
    <string name="added">Added</string>
    <string name="categories">Categories</string>
    <string name="updated">Updated</string>
    <string name="sync_status_error">Sync Error</string>
    <string name="sync_status_completed">Sync Completed</string>
    <string name="sync_status_icon">status icon</string>
    <string name="sync_title">Sync</string>
    <string name="unchanged">Unchanged</string>
    <string name="budgets">Budgets</string>
    <string name="bills">Bills</string>
    <string name="piggybanks">Piggybanks</string>
    <string name="tags">Tags</string>
    <string name="title_activity_shortcut_entity_detail_host">ShortcutEntityDetailHostActivity
    </string>
    <string name="title_shortcutentity_list">Shortcuts</string>
    <string name="title_shortcutentity_detail">ShortcutEntity Detail</string>
    <string name="manage_shortcuts">Manage Shortcuts</string>
    <string name="no_shortcuts_available_tap_to_create_one">No shortcuts available. Tap + to create one.</string>
    <string name="select_a_shortcut_to_view_details">Select a shortcut to view details</string>
    <string name="shortcut_name">Shortcut Name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="amount">Amount</string>
    <string name="from_account">From Account</string>
    <string name="to_account">To Account</string>
    <string name="category_optional">Category (Optional)</string>
    <string name="budget_optional">Budget (Optional)</string>
    <string name="bill_optional">Bill (Optional)</string>
    <string name="piggybank_optional">Piggybank (Optional)</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="delete_shortcut">Delete Shortcut</string>
    <string name="delete_shortcut_confirmation">"Are you sure you want to delete shortcut? \nThis action cannot be undone. "</string>
    <string name="Add">Add</string>
    <string name="title_activity_shortcut_model_detail_host">ShortcutModelDetailHostActivity
    </string>
    <string name="title_shortcutmodel_list">ShortcutModels</string>
    <string name="title_shortcutmodel_detail">ShortcutModel Detail</string>
    <string name="no_shortcuts_available">No shortcuts available</string>
    <string name="create_shortcut_message">Create New Shortcut</string>
    <string name="add_new_shortcut">Add New Shortcut</string>

    <string name="shortcut_info">Shortcut Information</string>
    <string name="categorization">Categorization</string>
    <string name="category">Category</string>
    <string name="budget">Budget</string>
    <string name="additional_info">Additional Information</string>
    <string name="bill">Bill</string>
    <string name="piggybank">Piggy Bank</string>
    <string name="save_shortcut">Save Shortcut</string>
    <string name="no_category">No Category</string>
    <string name="add_tag">Add a tag</string>
    <string name="all_tags">All Tags</string>
    <string name="select_tags">Select Tags</string>
    <string name="confirm">Confirm</string>
    <string name="list_of_shortcuts">List of Shortcuts</string>
    <string name="shortcut_details">Shortcut Details</string>
    <string name="run_shortcut">Run Shortcut</string>
    <string name="n_a">N/A</string>
    <string name="account_transfer_format">%1$s → %2$s</string>
    <string name="no_tags">No tags</string>
    <string name="never">Never</string>

    <string name="widget_title">Firefly Shortcuts</string>
    <string name="widget_no_shortcuts">No shortcuts available.\nAdd shortcuts in the app.</string>
    <string name="refresh">Refresh</string>
    <string name="shortcut_widget_description">Quick access to your financial shortcuts</string>
    <string name="auth_success">Authorization Successful</string>
    <string name="auth_fail">Authorization Failed!</string>
    <string name="enter_auth_code_manually">Enter Auth Code Manually</string>
    <string name="enter_authorization_code">Enter authorization code</string>
    <string name="manual_authorization">Manual Authorization</string>
    <string name="submit">Submit</string>
    <string name="logout">Log Out</string>
    <string name="version_info">Version Info</string>
    <string name="title_shortcuts">Shortcuts</string>
    <string name="title_autocuts">Autocuts</string>
    <string name="no_autocuts_available">No autocuts available</string>
    <string name="create_autocut_message">Create New Autocut</string>
</resources>