<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_settings"
    app:startDestination="@+id/navigation_shortcuts">

    <fragment
        android:id="@+id/navigation_shortcuts"
        android:name="com.mustafacanyucel.fireflyiiishortcuts.ui.shortcuts.ShortcutsFragment"
        android:label="@string/title_shortcuts"
        tools:layout="@layout/fragment_shortcuts" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.mustafacanyucel.fireflyiiishortcuts.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_sync"
        android:name="com.mustafacanyucel.fireflyiiishortcuts.ui.sync.SyncFragment"
        android:label="@string/title_sync"
        tools:layout="@layout/fragment_sync" />
    <fragment
        android:id="@+id/navigation_autocuts"
        android:name="com.mustafacanyucel.fireflyiiishortcuts.ui.autocuts.AutocutsFragment"
        android:label="@string/title_autocuts"
        tools:layout="@layout/fragment_autocuts" />
</navigation>